--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/individualconfirmation/IndividualTelephoneNumberPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/individualconfirmation/IndividualTelephoneNumberPage.scala.html
@@ -14,11 +14,12 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.EmailAddress
+@import uk.gov.hmrc.agentregistration.shared.TelephoneNumber
+
+@import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualTelephoneNumberForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
+@import uk.gov.hmrc.agentregistrationfrontend.views.html.individual.partials.SaveAndContinue
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichInput
-@import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualEmailAddressForm
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.partials.SaveAndContinue
 
 @this(
         layout: Layout,
@@ -29,13 +30,13 @@
 )
 
 @(
-        form: Form[EmailAddress])(implicit
+        form: Form[TelephoneNumber])(implicit
         request: RequestHeader,
         messages: Messages
 )
 
 @key = @{
-    IndividualEmailAddressForm.key
+    IndividualTelephoneNumberForm.key
 }
 @title = @{
     messages(s"$key.title")
@@ -45,17 +46,17 @@
     maybeForm = Some(form)
 ) {
     <h2 class="govuk-caption-l">@messages("provide-details.llp.title")</h2>
-    @formWithCSRF(action = AppRoutes.providedetails.IndividualEmailAddressController.submit) {
+    @formWithCSRF(action = AppRoutes.providedetails.IndividualTelephoneNumberController.submit) {
         @govukInput(Input(
             label = Label(
                 content = Text(title),
                 isPageHeading = true,
                 classes = "govuk-label--l"
             ),
-            inputType = "email",
+            inputType = "tel",
             hint = Some(Hint(content = Text(messages(s"$key.hint")))),
-            autocomplete = Some("email"),
-            spellcheck = Some("false")
+            autocomplete = Some("tel"),
+            classes = "govuk-input--width-20"
         ).withFormField(form(key)))
 
         @saveAndContinue()
