--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/individualconfirmation/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/individualconfirmation/CheckYourAnswersPage.scala.html
@@ -16,7 +16,7 @@
 
 @import uk.gov.hmrc.govukfrontend.views.html.components._
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.individualconfirmation.AnswerSummary
+@import uk.gov.hmrc.agentregistrationfrontend.views.html.individual.individualconfirmation.AnswerSummary
 @import uk.gov.hmrc.agentregistration.shared.individual.IndividualProvidedDetailsToBeDeleted
 
 @this(
