--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/individualconfirmation/IndividualApproveApplicationPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/individualconfirmation/IndividualApproveApplicationPage.scala.html
@@ -14,68 +14,59 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.individual.UserProvidedNino
-
-@import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualNinoForm
+@import uk.gov.hmrc.agentregistration.shared.individual.IndividualProvidedDetailsToBeDeleted
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.partials.SaveAndContinue
+@import uk.gov.hmrc.agentregistrationfrontend.views.html.individual.partials.SaveAndContinue
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
-@import uk.gov.hmrc.govukfrontend.views.Implicits.RichInput
 @import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo
+@import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualApproveApplicationForm
 
 @this(
         layout: Layout,
         govukRadios: GovukRadios,
-        govukInput: GovukInput,
         formWithCSRF: FormWithCSRF,
         govukButton: GovukButton,
+        govukInsetText: GovukInsetText,
         saveAndContinue: SaveAndContinue
 )
 
+
 @(
-        form: Form[UserProvidedNino])(implicit
+        form: Form[YesNo],
+        officerName: String,
+        companyName: String)(implicit
         request: RequestHeader,
         messages: Messages
 )
 
-@key = @{
-    IndividualNinoForm.hasNinoKey
-}
-@ninoKey = @{
-    IndividualNinoForm.ninoKey
-}
-@title = @{messages(s"$key.title")}
+@key: String = @{IndividualApproveApplicationForm.key}
 
-@ninoInput = {
-    @govukInput(Input(
-        label = Label(
-            content = Text(messages(s"$ninoKey.label"))
-        ),
-        hint = Some(Hint(
-            content = Text(messages(s"$ninoKey.hint"))
-        )),
-        spellcheck = Some(false)
-    ).withFormField(form(ninoKey)))
-}
+@title = @{messages(s"$key.title")}
+@question = @{messages(s"$key.question", officerName)}
+
 @layout(
     pageTitle = title,
     maybeForm = Some(form)
 ) {
     <h2 class="govuk-caption-l">@messages("provide-details.llp.title")</h2>
-    @formWithCSRF(action = AppRoutes.providedetails.IndividualNinoController.submit) {
+
+    <h1 class="govuk-heading-l">@title</h1>
+
+    <p class="govuk-body">@messages(s"$key.info", officerName, companyName)</p>
+
+    @formWithCSRF(action = AppRoutes.providedetails.IndividualApproveApplicantController.submit) {
         @govukRadios(Radios(
             fieldset = Some(Fieldset(
                 legend = Some(Legend(
-                    content = Text(title),
-                    isPageHeading = true,
-                    classes = "govuk-fieldset__legend--l"
+                    content = Text(question),
+                    isPageHeading = false,
+                    classes = "govuk-fieldset__legend--m"
                 ))
             )),
             items = YesNo.values.toSeq.map:
                 case YesNo.Yes => RadioItem(
                     content = HtmlContent(messages(s"$key.yes")),
                     value = Some(YesNo.Yes.toString),
-                    conditionalHtml = Some(ninoInput)
                 )
                 case YesNo.No => RadioItem(
                     content = HtmlContent(messages(s"$key.no")),
