--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/link/LinkPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/link/LinkPage.scala.html
@@ -16,11 +16,11 @@
 
 @import uk.gov.hmrc.agentregistration.shared.AgentApplication
 @import uk.gov.hmrc.agentregistration.shared.AgentApplicationLlp
-@import uk.gov.hmrc.agentregistration.shared.llp.IndividualProvidedDetails
+@import uk.gov.hmrc.agentregistration.shared.individual.IndividualProvidedDetails
 @import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.components.CopyButton
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
+@import uk.gov.hmrc.agentregistrationfrontend.views.html.applicant.partials.ContinueOrSaveForLater
 @import views.html.helper.CSPNonce
 
 @this(
