APB-10749 rework actions to match individual

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/StartPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/StartPage.scala.html
@@ -64,9 +64,8 @@
             href= Some(
               AppRoutes
                 .providedetails
-                .internal
-                .InitiateIndividualProvideDetailsController
-                .initiateIndividualProvideDetails(linkId)
+                .ConfirmMatchToIndividualProvidedDetailsController
+                .show(linkId)
                 .url
             ),
             isStartButton = true
