[WG][APB-10686][APB-10691] Unofficial/Other Relevant Partners confirm, add, remove, cyA pages

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/nonincorporated/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/nonincorporated/CheckYourAnswersPage.scala.html
@@ -127,7 +127,7 @@
   } else {
     <p class="govuk-body">
       @continueOrSaveForLaterLinks(
-        continueHref = AppRoutes.apply.TaskListController.show.url,
+        continueHref = AppRoutes.apply.listdetails.otherrelevantindividuals.CheckYourAnswersController.show.url,
         continueLabel = Some(messages("common.confirmAndContinue"))
       )
     </p>
