--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/IndividualConfirmationPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/IndividualConfirmationPage.scala.html
@@ -14,6 +14,7 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.agentregistration.shared.LinkId
 @import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 
@@ -25,7 +26,7 @@
 
 @(
         applicantName: String,
-        companyName: String)(implicit
+        entityName: String)(implicit
         request: RequestHeader,
         messages: Messages
 )
@@ -36,7 +37,7 @@
 @pageTitle = @{
     messages(s"$key.title")
 }
-@signOutLink: String = @{
+@signOutLink = @{
   s"${appConfig.basFrontendSignOutUrlBase}?continueUrl=feedback/AGENT_REG_IND_DETAILS"
 }
 
@@ -56,7 +57,7 @@
     </h2>
     <p class="govuk-body">
     @{
-        messages(s"$key.whatNext.p1", companyName)
+        messages(s"$key.whatNext.p1", entityName)
     }
     </p>
     <p class="govuk-body">
