--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/IndividualHmrcStandardForAgentsPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/IndividualHmrcStandardForAgentsPage.scala.html
@@ -14,8 +14,8 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.agentregistration.shared.LinkId
 @import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
-@import uk.gov.hmrc.agentregistrationfrontend.model.SubmitAction.SaveAndComeBackLater
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.hmrcfrontend.views.html.helpers.HmrcNewTabLinkHelper
 @import uk.gov.hmrc.hmrcfrontend.views.viewmodels.newtablinkhelper.NewTabLinkHelper
@@ -29,7 +29,7 @@
         govukButton: GovukButton
 )
 
-@()(implicit
+@(linkId: LinkId)(implicit
         request: RequestHeader,
         messages: Messages
 )
@@ -76,7 +76,7 @@
     }
     </p>
 
-    @formWithCSRF(action = AppRoutes.providedetails.IndividualHmrcStandardForAgentsController.submit) {
+    @formWithCSRF(action = AppRoutes.providedetails.IndividualHmrcStandardForAgentsController.submit(linkId)) {
 
         @govukButton(Button(
             name = Some("submit"),
