--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/nonincorporated/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/nonincorporated/CheckYourAnswersPage.scala.html
@@ -127,7 +127,7 @@
   } else {
     <p class="govuk-body">
       @continueOrSaveForLaterLinks(
-        continueHref = AppRoutes.apply.listdetails.otherrelevantindividuals.CheckYourAnswersController.show.url,
+        continueHref = AppRoutes.apply.listdetails.CheckYourAnswersController.show.url,
         continueLabel = Some(messages("common.confirmAndContinue"))
       )
     </p>
