--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/applicant/listdetails/CheckYourAnswersPage.scala.html
@@ -42,125 +42,86 @@
 @title = @{
     messages(s"$key.title")
 }
-
-@rows = @{
-    val partnerChangeNumberHref =
-        AppRoutes.apply.listdetails.nonincorporated.NumberOfKeyIndividualsController.show.url
-
-    val partnerChangeListHref =
-        AppRoutes.apply.listdetails.nonincorporated.CheckYourAnswersController.show.url
-
-    val hasOtherRelevantIndividualsChangeHref =
-        AppRoutes.apply.listdetails.otherrelevantindividuals.ConfirmOtherRelevantIndividualsController.show.url
-
-    val otherRelevantIndividualsChangeListHref =
-        AppRoutes.apply.listdetails.otherrelevantindividuals.CheckYourAnswersController.show.url
-
-    val noBorderRowClass = "govuk-summary-list__row--no-border"
-
-    val partnerRows: Seq[SummaryListRow] =
-        if (nonIncorporatedIndividualsList.nonEmpty) {
-            val partnerNames: List[String] = nonIncorporatedIndividualsList.map(_.individualName.value)
-
-            val numberRow =
-                SummaryListRow(
-                    key = Key(content = Text(messages(s"$key.numberOfPartners.label"))),
-                    value = Value(content = Text(nonIncorporatedIndividualsList.size.toString)),
-                    actions = Some(Actions(items = Seq(
-                        ActionItem(
-                            href = partnerChangeNumberHref,
-                            content = Text(messages("common.change")),
-                            visuallyHiddenText = Some(messages(s"$key.numberOfPartners.label"))
-                        )
-                    )))
+@keyNumberRow = @{
+    Seq(
+        SummaryListRow(
+            key = Key(content = Text(messages(s"$key.numberOfPartners.label"))),
+            value = Value(content = Text(nonIncorporatedIndividualsList.size.toString)),
+            actions = Some(Actions(items = Seq(
+                ActionItem(
+                    href = AppRoutes.apply.listdetails.nonincorporated.NumberOfKeyIndividualsController.show.url,
+                    content = Text(messages("common.change")),
+                    visuallyHiddenText = Some(messages(s"$key.numberOfPartners.label"))
                 )
-
-            val namesRows: Seq[SummaryListRow] =
-                partnerNames.zipWithIndex.map { (name, idx) =>
-                    val isLastNameRow = idx == (partnerNames.size - 1)
-                    SummaryListRow(
-                        key = Key(content = Text(if (idx == 0) messages(s"$key.partnerNames.label") else "")),
-                        value = Value(content = Text(name)),
-                        actions =
-                            if (idx == 0)
-                                Some(Actions(items = Seq(
-                                    ActionItem(
-                                        href = partnerChangeListHref,
-                                        content = Text(messages("common.change")),
-                                        visuallyHiddenText = Some(messages(s"$key.partnerNames.label"))
-                                    )
-                                )))
-                            else None,
-                        classes = if (!isLastNameRow) noBorderRowClass else ""
-                    )
-                }
-
-            numberRow +: namesRows
-        } else Seq.empty
-
-    val hasOtherRelevantIndividualsRow: Seq[SummaryListRow] =
-        agentApplication.hasOtherRelevantIndividuals match {
-            case Some(true) =>
-                Seq(
-                    SummaryListRow(
-                        key = Key(content = Text(messages(s"$key.hasOtherRelevantIndividuals.label"))),
-                        value = Value(content = Text(messages("common.yes"))),
-                        actions = Some(Actions(items = Seq(
-                            ActionItem(
-                                href = hasOtherRelevantIndividualsChangeHref,
-                                content = Text(messages("common.change")),
-                                visuallyHiddenText = Some(messages(s"$key.hasOtherRelevantIndividuals.label"))
-                            )
-                        )))
-                    )
-                )
-            case Some(false) =>
-                Seq(
-                    SummaryListRow(
-                        key = Key(content = Text(messages(s"$key.hasOtherRelevantIndividuals.label"))),
-                        value = Value(content = Text(messages("common.no"))),
-                        actions = Some(Actions(items = Seq(
-                            ActionItem(
-                                href = hasOtherRelevantIndividualsChangeHref,
-                                content = Text(messages("common.change")),
-                                visuallyHiddenText = Some(messages(s"$key.hasOtherRelevantIndividuals.label"))
-                            )
-                        )))
-                    )
-                )
-            case None =>
-                Seq.empty
-        }
-
-    val otherRelevantIndividualsRows: Seq[SummaryListRow] =
-        agentApplication.hasOtherRelevantIndividuals match {
-            case Some(true) if otherRelevantIndividualsList.nonEmpty =>
-                val names: List[String] = otherRelevantIndividualsList.map(_.individualName.value)
-
-                names.zipWithIndex.map { (name, idx) =>
-                    val isLastNameRow = idx == (names.size - 1)
-                    SummaryListRow(
-                        key = Key(content = Text(if (idx == 0) messages(s"$key.otherRelevantIndividualsNames.label") else "")),
-                        value = Value(content = Text(name)),
-                        actions =
-                            if (idx == 0)
-                                Some(Actions(items = Seq(
-                                    ActionItem(
-                                        href = otherRelevantIndividualsChangeListHref,
-                                        content = Text(messages("common.change")),
-                                        visuallyHiddenText = Some(messages(s"$key.otherRelevantIndividualsNames.label"))
-                                    )
-                                )))
-                            else None,
-                        classes = if (!isLastNameRow) noBorderRowClass else ""
-                    )
-                }
-            case _ =>
-                Seq.empty
-        }
-
-    partnerRows ++ hasOtherRelevantIndividualsRow ++ otherRelevantIndividualsRows
+            )))
+        )
+   )
 }
+@keyNamesList = {
+    <ul class="govuk-list">
+    @{nonIncorporatedIndividualsList.map { partner => <li>{partner.individualName.value}</li>}}
+    </ul>
+}
+@keyNamesRow = @{
+  if (nonIncorporatedIndividualsList.nonEmpty)
+    Seq(
+        SummaryListRow(
+            key = Key(content = Text(messages(s"$key.partnerNames.label"))),
+            value = Value(content = HtmlContent(keyNamesList)),
+            actions = Some(Actions(items = Seq(
+                ActionItem(
+                    href = AppRoutes.apply.listdetails.nonincorporated.CheckYourAnswersController.show.url,
+                    content = Text(messages("common.change")),
+                    visuallyHiddenText = Some(messages(s"$key.partnerNames.label"))
+                )
+            )))
+        )
+    )
+  else Seq.empty
+}
+@otherNamesList = {
+    <ul class="govuk-list">
+      @{otherRelevantIndividualsList.map { individual => <li>{individual.individualName.value}</li>}}
+    </ul>
+}
+@hasOthersRow = @{
+  Seq(
+    SummaryListRow(
+        key = Key(content = Text(messages(s"$key.hasOtherRelevantIndividuals.label"))),
+        value = Value(content = Text(agentApplication.hasOtherRelevantIndividuals match {
+            case Some(true) => messages("common.yes")
+            case Some(false) => messages("common.no")
+            case None => ""
+        })),
+        actions = Some(Actions(items = Seq(
+            ActionItem(
+                href = AppRoutes.apply.listdetails.otherrelevantindividuals.ConfirmOtherRelevantIndividualsController.show.url,
+                content = Text(messages("common.change")),
+                visuallyHiddenText = Some(messages(s"$key.hasOtherRelevantIndividuals.label"))
+            )
+        )))
+    )
+  )
+}
+@otherNamesRow = @{
+  if (agentApplication.hasOtherRelevantIndividuals.contains(true) && otherRelevantIndividualsList.nonEmpty)
+    Seq(
+        SummaryListRow(
+            key = Key(content = Text(messages(s"$key.otherRelevantIndividualsNames.label"))),
+            value = Value(content = HtmlContent(otherNamesList)),
+            actions = Some(Actions(items = Seq(
+                ActionItem(
+                    href = AppRoutes.apply.listdetails.otherrelevantindividuals.CheckYourAnswersController.show.url,
+                    content = Text(messages("common.change")),
+                    visuallyHiddenText = Some(messages(s"$key.otherRelevantIndividualsNames.label"))
+                )
+            )))
+        )
+    )
+  else Seq.empty
+}
+
+@rows = @{keyNumberRow ++ keyNamesRow ++ hasOthersRow ++ otherNamesRow}
 
 @layout(pageTitle = title) {
     <h2 class="govuk-caption-l">@messages("lists.caption.title.Partnership")</h2>
