--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/ConfirmMatchToIndividualProvidedDetailsPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/ConfirmMatchToIndividualProvidedDetailsPage.scala.html
@@ -14,65 +14,80 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.agentregistration.shared.individual.IndividualProvidedDetails
 @import uk.gov.hmrc.agentregistration.shared.LinkId
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.individual.partials.SaveAndContinue
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
 @import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo
-@import uk.gov.hmrc.agentregistrationfrontend.forms.IndividualApproveApplicationForm
+@import uk.gov.hmrc.agentregistrationfrontend.forms.ConfirmMatchToIndividualProvidedDetailsForm
 
 @this(
         layout: Layout,
         govukRadios: GovukRadios,
         formWithCSRF: FormWithCSRF,
+        govukSummaryList: GovukSummaryList,
         govukButton: GovukButton,
         govukInsetText: GovukInsetText,
         saveAndContinue: SaveAndContinue
 )
 
-
 @(
         form: Form[YesNo],
-        officerName: String,
+        individualProvidedDetails: IndividualProvidedDetails,
         entityName: String,
-        linkId: LinkId)(implicit
+        businessTypeKey: String,
+        linkId: LinkId
+)(implicit
         request: RequestHeader,
         messages: Messages
 )
 
-@key: String = @{IndividualApproveApplicationForm.key}
-
+@key = @{ConfirmMatchToIndividualProvidedDetailsForm.key}
 @title = @{messages(s"$key.title")}
-@question = @{messages(s"$key.question", officerName)}
+@roleKey = @{
+  if(individualProvidedDetails.isPersonOfControl) businessTypeKey
+  else "otherRelevantIndividual"
+}
 
 @layout(
     pageTitle = title,
     maybeForm = Some(form)
 ) {
-    <h2 class="govuk-caption-l">@messages("provide-details.llp.title")</h2>
-
     <h1 class="govuk-heading-l">@title</h1>
+    <p class="govuk-body">@messages(s"$key.p1")</p>
+    @govukSummaryList(SummaryList(
+      rows = Seq(
+        SummaryListRow(
+          key = Key(content = Text(messages(s"$key.role.$roleKey"))),
+          value = Value(content = Text(individualProvidedDetails.individualName.value))
+        ),
+        SummaryListRow(
+          key = Key(content = Text(messages(s"$key.entityInApplication.$businessTypeKey"))),
+          value = Value(content = Text(entityName))
+        )
+      )
+    ))
 
-    <p class="govuk-body">@messages(s"$key.info", officerName, entityName)</p>
-
-    @formWithCSRF(action = AppRoutes.providedetails.IndividualApproveApplicantController.submit(linkId)) {
+    @formWithCSRF(action = AppRoutes.providedetails.ConfirmMatchToIndividualProvidedDetailsController.submit(linkId)) {
         @govukRadios(Radios(
             fieldset = Some(Fieldset(
                 legend = Some(Legend(
-                    content = Text(question),
+                    content = Text(messages(s"$key.label")),
                     isPageHeading = false,
                     classes = "govuk-fieldset__legend--m"
                 ))
             )),
-            items = YesNo.values.toSeq.map:
-                case YesNo.Yes => RadioItem(
-                    content = HtmlContent(messages(s"$key.yes")),
-                    value = Some(YesNo.Yes.toString),
-                )
-                case YesNo.No => RadioItem(
-                    content = HtmlContent(messages(s"$key.no")),
-                    value = Some(YesNo.No.toString)
-                )
+            items = Seq(
+              RadioItem(
+                content = HtmlContent(messages(s"$key.yes")),
+                value = Some(YesNo.Yes.toString),
+              ),
+              RadioItem(
+                content = HtmlContent(messages(s"$key.no")),
+                value = Some(YesNo.No.toString)
+              )
+            )
         ).withFormField(form(key)))
 
         @saveAndContinue()
