--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/ConfirmMatchToIndividualProvidedDetailsPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/individual/ConfirmMatchToIndividualProvidedDetailsPage.scala.html
@@ -16,6 +16,7 @@
 
 @import uk.gov.hmrc.agentregistration.shared.individual.IndividualProvidedDetails
 @import uk.gov.hmrc.agentregistration.shared.LinkId
+@import uk.gov.hmrc.agentregistration.shared.util.SafeEquals.===
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.individual.partials.SaveAndContinue
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
@@ -49,6 +50,23 @@
   if(individualProvidedDetails.isPersonOfControl) businessTypeKey
   else "otherRelevantIndividual"
 }
+@individualNameRow = @{
+  Seq(
+    SummaryListRow(
+      key = Key(content = Text(messages(s"$key.role.$roleKey"))),
+      value = Value(content = Text(individualProvidedDetails.individualName.value))
+    )
+  )
+}
+@entityNameRow = @{
+  Seq(
+    SummaryListRow(
+      key = Key(content = Text(messages(s"$key.entityInApplication.$businessTypeKey"))),
+      value = Value(content = Text(entityName))
+    )
+  )
+}
+@rows =  @{if(businessTypeKey === "SoleTrader") individualNameRow else individualNameRow ++ entityNameRow}
 
 @layout(
     pageTitle = title,
@@ -57,16 +75,7 @@
     <h1 class="govuk-heading-l">@title</h1>
     <p class="govuk-body">@messages(s"$key.p1")</p>
     @govukSummaryList(SummaryList(
-      rows = Seq(
-        SummaryListRow(
-          key = Key(content = Text(messages(s"$key.role.$roleKey"))),
-          value = Value(content = Text(individualProvidedDetails.individualName.value))
-        ),
-        SummaryListRow(
-          key = Key(content = Text(messages(s"$key.entityInApplication.$businessTypeKey"))),
-          value = Value(content = Text(entityName))
-        )
-      )
+      rows = rows
     ))
 
     @formWithCSRF(action = AppRoutes.providedetails.MatchIndividualProvidedDetailsController.submit(linkId)) {
